--- a/client/src/pages/CodeEditor/console.css
+++ b/client/src/pages/CodeEditor/console.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
 .console-wrap {
     width: 35vw;
     height: 60%;
@@ -70,29 +68,41 @@
     background-color: black;
     border-radius: 1vw;
     color: white;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow: hidden;
 
 }
 
 .console-content {
-    margin-left: 1vw;
+    font-family: "Fira Code", monospace;
+    font-size: 1.5vh;
+    padding-left: 1vw;
+    padding-top: 2vh;
+    width: 33vw;
+    height: 100%;
+    color: white;
+    resize: none;
+    white-space: nowrap;
+    background-color: black;
+    border: none;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    outline: none;
 }
 
-.console::-webkit-scrollbar {
+.console-content::-webkit-scrollbar {
     background-color: transparent;
     width: 1vh;
 }
 
-.console::-webkit-scrollbar-thumb:hover {
+.console-content::-webkit-scrollbar-thumb:hover {
     cursor: pointer;
 }
 
-.console::-webkit-scrollbar-corner {
+.console-content::-webkit-scrollbar-corner {
     background-color: transparent;
 }
 
-.console::-webkit-scrollbar-thumb {
+.console-content::-webkit-scrollbar-thumb {
     background-color: #494a4d;
     border-radius: 1vw;
     width: 0.5vh;
