--- a/client/src/components/Editor/editor.css
+++ b/client/src/components/Editor/editor.css
@@ -2,26 +2,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 .editor-wrap {
+    height: 100%;
     display: flex;
     flex-direction: row;
-    height: 81vh;
-    width: 60vw;
     margin-top: 2vh;
-    margin-left: 2vw;
+    padding-bottom: 1vh;
     background-color: #a9aaad;
     border-radius: 2.5vh;
     overflow: hidden;
-}
-
-.opened {
-    height: 50vh;
+    tab-size: 4;
 }
 
 .editor__string-numbers {
-    width: 2.5vw;
+    width: 10%;
     height: 100%;
-    margin-top: 2vh;
+    padding-top: 2vh;
     margin-right: 1vw;
+    margin-left: 0.5vw;
     text-align: left;
     resize: none;
     font-family: "Fira Code", monospace;
@@ -29,21 +26,16 @@
     font-size: 1vw;
     background-color: #a9aaad;
     border: none;
-    line-height: 1.2vw;
+    line-height: 2.2vh;
     pointer-events: none;
     overflow: hidden;
     text-align: right;
 }
 
-.editor__string-number {
-    font-family: "Fira Code", monospace;
-    font-size: 1vw;
-}
-
 .editor {
-    width: 58vw;
+    width: 100%;
     height: 100%;
-    margin-top: 2vh;
+    padding-top: 2vh;
     text-align: left;
     overflow: scroll;
     resize: none;
@@ -52,7 +44,7 @@
     font-size: 1vw;
     background-color: #a9aaad;
     border: none;
-    line-height: 1.2vw;
+    line-height: 2.2vh;
     white-space: nowrap;
 }
 
