--- a/client/src/pages/CodeEditor/exerciseDisplay.css
+++ b/client/src/pages/CodeEditor/exerciseDisplay.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
 
 .exercise-wrap {
     height: 30vh;
@@ -10,6 +11,7 @@
     border-radius: 2vh;
     overflow: hidden;
     font-family: "Noto Sans", sans-serif;
+    font-size: 1.5vh;
 }
 
 .exercise-header {
@@ -19,6 +21,7 @@
     padding-left: 1vw;
     padding-top: 1vh;
     display: flex;
+    justify-content: center;
 }
 
 .exercise-name {
@@ -33,6 +36,11 @@
 .exercise-close-btn img {
     width: 1vw;
     height: 1vw;
+}
+
+.exercise-close-btn:hover img {
+    width: 1.1vw;
+    height: 1.1vw;
 }
 
 .exercise-text {
