--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Electrolize&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 
 * {
     margin: 0;
@@ -151,4 +152,19 @@ header {
 .header__account-menu div:hover {
     transform: scale(1.05);
     color: #a48640;
+}
+
+.loadingScreen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-family: "Oswald", sans-serif;
+    font-size: 8vh;
+    color: #d8d9db;
+    backdrop-filter: blur(8px);
+    background-color: rgba(255, 255, 255, 0.2);
 }
