Course editor update (still not ready and now working)

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -101,6 +101,7 @@ header {
     align-items: center;
     border-radius: 2vw;
     margin-top: 1vh;
+    padding-left: 1vw;
 }
 
 .header__account-wrap[hidden] {
