--- a/client/src/pages/CourseEditor/courseEditor.css
+++ b/client/src/pages/CourseEditor/courseEditor.css
@@ -1,8 +1,14 @@
+html {
+    overflow-x: hidden;
+}
+
 .course_editor-wrap {
     width: 100%;
     height: 91vh;
+    overflow-x: hidden;
     display: flex;
     justify-content: end;
+
 }
 
 .left_pannel {
@@ -20,6 +26,7 @@
     margin-left: 1vw;
     border: 0.1vh black solid;
     background-color: #a9aaad;
+    overflow-x: hidden;
 }
 
 .choose_menu {
@@ -53,89 +60,4 @@
 
 .course_editor-block {
     min-height: 1vh;
-}
-
-.course_editor-block.active {
-    border: lightblue solid 0.4vh;
-}
-
-.choose_menu-block_btn-insert_choise_wrap {
-    position: absolute;
-    top: 100%;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-2vh);
-    transition: all 0.3s ease;
-    background-color: #ededf0;
-    width: 130%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 1vh;
-}
-
-.choose_menu-block_btn:hover .choose_menu-block_btn-insert_choise_wrap {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-}
-
-.choose_menu-block_btn-insert-choise {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0.7vh;
-}
-
-.choose_menu-block_btn-insert-choise:first-of-type {
-    margin-top: 0.7vh;
-}
-
-.choose_menu-block_btn-insert-choise:hover {
-    transform: scale(1.1);
-}
-
-.course_editor-block-text {
-    position: relative;
-    margin: 1vw;
-    margin-top: 0;
-    padding: 1vh;
-    max-width: 100%;
-}
-
-.course_editor-text_align_choices-wrap {
-    width: 83vw;
-    display: flex;
-    justify-content: end;
-
-}
-
-.course_editor-text_align_choices {
-    display: flex;
-    margin-right: 1.5vw;
-    border: 0.1vh solid black;
-    border-radius: 0.7vh;
-    margin-top: 0.4vh;
-    margin-bottom: 0.4vh;
-}
-
-.course_editor-text_align-choice {
-    width: 1.2vw;
-    height: 1.2vw;
-    margin: 0.5vh;
-    margin-left: 0;
-
-}
-
-.course_editor-text_align-choice:first-of-type {
-    margin-left: 0.5vh;
-}
-
-.course_editor-text_align-choice img {
-    width: 100%;
-}
-
-.course_editor-text_align-choice img:hover {
-    transform: scale(1.1);
 }
