--- a/client/src/pages/CourseEditor/courseEditor.css
+++ b/client/src/pages/CourseEditor/courseEditor.css
@@ -11,13 +11,40 @@ html {
 
 }
 
-.left_pannel {
+.left_panel-wrap {
+    width: 100%;
+    height: 88vh;
+}
+
+.left_panel {
     min-width: 14vw;
     height: 80%;
-    margin-left: 2vw;
+    margin-left: 1vw;
     margin-top: 2vh;
     background-color: #ededf0;
     border-radius: 2vh;
+}
+
+.panel-options {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: "Electrolize", sans-serif;
+}
+
+.panel-option {
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    margin-top: 1vh;
+}
+
+.panel-option input {
+    margin-left: 0.4vw;
 }
 
 .main-area {
