--- a/client/src/components/ExerciseSettingsComponents/input.css
+++ b/client/src/components/ExerciseSettingsComponents/input.css
@@ -34,7 +34,44 @@
     position: relative;
     display: inline-flex;
     align-items: center;
-    height: 100%;
-    height: 100%;
     gap: 0.4vw;
+    margin-left: 1vw;
+    margin-top: 1vh;
+}
+
+.settingCheckbox input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+
+.settingCheckbox label {
+    cursor: pointer;
+    user-select: none;
+    font-family: "Electrolize", sans-serif;
+    font-weight: 600;
+    font-size: 2vh;
+}
+
+.settingCheckbox.autocheck {
+    margin-top: 3vh;
+}
+
+.inOut {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 40% 10% 40%;
+    grid-template-rows: 1;
+    align-items: bottom;
+    justify-items: start;
+}
+
+.arrow-img {
+    max-width: 6vw;
+    margin-right: 1vh;
+}
+
+.arrow-img img {
+    width: 100%;
 }
