--- a/client/src/pages/CodeEditor/exerciseSelector.css
+++ b/client/src/pages/CodeEditor/exerciseSelector.css
@@ -5,6 +5,7 @@
     backdrop-filter: blur(8px);
     background-color: rgba(255, 255, 255, 0.2);
     font-family: "Fira Code", monospace;
+    pointer-events: none;
 }
 
 .exercise-selector {
@@ -16,6 +17,7 @@
     background-color: #797a7c;
     border-radius: 2vh;
     overflow: hidden;
+    pointer-events: auto;
 }
 
 .exercise-selector__choose-label {
