--- a/client/src/pages/CourseEditor/components/components.css
+++ b/client/src/pages/CourseEditor/components/components.css
@@ -236,3 +236,72 @@
 .select-option-add:hover {
     transform: scale(1.1);
 }
+
+.page_handeler {
+    margin-top: auto;
+    width: 100%;
+    max-height: 4vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1vh 0;
+}
+
+.page_handeler-button {
+    width: 2vh;
+    height: 2vh;
+}
+
+.page_handeler-button img {
+    width: 100%;
+}
+
+.page_handeler-button img:hover {
+    transform: scale(1.1);
+}
+
+.page_handeler-pages {
+    display: flex;
+}
+
+.page_handeler-page {
+    width: 2vh;
+    height: 2vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.3vh;
+    margin-left: 0.2vw;
+    margin-right: 0.2vw;
+}
+
+.page_handeler-page.active {
+    background-color: #797a7c;
+}
+
+.page_handeler-choosePage {
+    text-decoration: none;
+    color: black;
+    font-size: 2vh;
+}
+
+.page_handeler-choosePage:hover {
+    font-weight: bold;
+}
+
+.page_handeler-input {
+    height: 2vh;
+    text-align: center;
+    width: 4ch;
+}
+
+.page_handeler-input::-webkit-outer-spin-button,
+.page_handeler-input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Убираем стрелочки в Firefox */
+.page_handeler-input[type=number] {
+    -moz-appearance: textfield;
+}
