--- a/client/src/pages/ExerciseEditor/exerciseEditor.css
+++ b/client/src/pages/ExerciseEditor/exerciseEditor.css
@@ -117,7 +117,6 @@
 }
 
 .exercise_editor_page-notification {
-    background-color: rgba(76, 166, 76, 0.453);
     padding: 1vh;
     border-radius: 1vh;
     display: flex;
@@ -137,6 +136,14 @@
 
 .notification-delete img {
     width: 100%;
+}
+
+.notification-green {
+    background-color: rgba(76, 166, 76, 0.453);
+}
+
+.notification-red {
+    background-color: rgba(166, 76, 76, 0.453);
 }
 
 @keyframes slideIn {
