--- a/client/src/pages/ExerciseEditor/componenets/components.css
+++ b/client/src/pages/ExerciseEditor/componenets/components.css
@@ -4,6 +4,7 @@ img {
 
 .label-line {
     display: flex;
+    align-items: center;
 }
 
 .add_code_block-btn {
@@ -13,6 +14,7 @@ img {
     padding-left: 0.5vw;
     padding-right: 0.5vw;
     border-radius: 1vh;
+    height: 4vh;
     font-family: "Electrolize";
 }
 
@@ -235,4 +237,12 @@ img {
 
 .fileMenu-file_editor-closeIcon img:hover {
     transform: scale(1.1);
+}
+
+.label-break {
+    margin-left: 3vw;
+}
+
+.desc-select {
+    margin-left: 1vw;
 }
