--- a/client/src/pages/CodeEditor/exerciseSelector.css
+++ b/client/src/pages/CodeEditor/exerciseSelector.css
@@ -1,17 +1,18 @@
 .exercise-selector-wrap {
+    z-index: 2;
     position: absolute;
     width: 100%;
     height: 100%;
     backdrop-filter: blur(8px);
     background-color: rgba(255, 255, 255, 0.2);
     font-family: "Fira Code", monospace;
-    pointer-events: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .exercise-selector {
     position: relative;
-    margin-top: 20vh;
-    margin-left: 35vw;
     width: 30vw;
     height: 60vh;
     background-color: #797a7c;
@@ -58,6 +59,49 @@
     justify-content: center;
     color: white;
     border-radius: 1vh;
+    cursor: pointer;
+}
+
+.exercise-selector__buttons__btn:hover {
+    transform: scale(1.1);
+}
+
+
+.exercise-selector__buttons__btn:active {
+    background-color: #15191f;
+}
+
+.exercise-selector__course-section {
+    width: 100%;
+}
+
+.exercise-selector__course-header {
+    width: 100%;
+    min-width: 100%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    padding-left: 1vh;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-weight: 600;
+    user-select: none;
+    background-color: #65676a;
+}
+
+.exercise-selector__course-header:hover {
+    background-color: #5e6063;
+}
+
+.exercise-selector__course-arrow {
+    margin-right: 1vh;
+    font-size: 0.8em;
+    user-select: none;
+}
+
+.exercise-selector__course-exercises {
+    width: 100%;
+    user-select: none;
 }
 
 .exercise-selector__exercise {
@@ -66,16 +110,15 @@
     height: 5vh;
     display: flex;
     align-items: center;
-    justify-content: center;
     box-sizing: border-box;
     padding-right: 1vh;
+    padding-left: 3vh;
     cursor: pointer;
 }
 
 .exercise-selector__exercise:hover {
     background-color: #5e6063;
 }
-
 
 .exercise-selector__exercise.active {
     background-color: #5e6063;
@@ -98,4 +141,77 @@
     background-color: #494a4d;
     border-radius: 1vw;
     width: 0.5vh;
+}
+
+.course_add-wrap {
+    width: 30vw;
+    height: 60vh;
+}
+
+.course_add {
+    margin-left: 3vw;
+    width: 20vw;
+}
+
+.course_add-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #222831;
+    color: white;
+    padding: 1vh;
+    font-size: 2vh;
+    border-top-left-radius: 2vh;
+    border-top-right-radius: 2vh;
+}
+
+.course_add-main {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #797a7c;
+    border-bottom-left-radius: 2vh;
+    border-bottom-right-radius: 2vh;
+}
+
+.course_add-input-wrap {
+    width: 90%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 1vh;
+}
+
+.course_add-input {
+    width: 90%;
+    height: 2vh;
+    background-color: #d8d9db;
+    border-radius: 1vh;
+    padding: 0.5vh;
+    font-family: "Electrolize";
+}
+
+.course_add-add_btn {
+    width: 4vw;
+    height: 3vh;
+    background-color: #222831;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 1vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    cursor: pointer;
+}
+
+.course_add-add_btn:hover {
+    transform: scale(1.1);
+}
+
+
+.course_add-add_btn:active {
+    background-color: #15191f;
 }
