--- a/client/src/pages/ExerciseEditor/componenets/components.css
+++ b/client/src/pages/ExerciseEditor/componenets/components.css
@@ -1,43 +1,3 @@
-img {
-    user-select: none;
-}
-
-.label-line {
-    display: flex;
-    align-items: center;
-}
-
-.add_code_block-btn {
-    background-color: #FFD369;
-    margin-left: 1.5vw;
-    min-width: 4vw;
-    padding-left: 0.5vw;
-    padding-right: 0.5vw;
-    border-radius: 1vh;
-    height: 4vh;
-    font-family: "Electrolize";
-}
-
-.add_code_block-btn:hover {
-    background-color: #e5b443;
-}
-
-.add_code_block-btn:active {
-    background-color: #8e6e26;
-}
-
-.exercise_editor_page-form-item-desciption {
-    margin-top: 1vh;
-    width: 50vw;
-    min-height: 20vh;
-    padding-left: 1vw;
-    padding-top: 1vh;
-    text-justify: center;
-    font-size: 2vh;
-    background-color: #d8d9db;
-}
-
-
 .autocheck_values-menu-add_btn {
     font-family: "Electrolize";
     margin-left: 2vw;
@@ -239,10 +199,123 @@ img {
     transform: scale(1.1);
 }
 
+.label-line {
+    display: flex;
+    align-items: center;
+}
+
 .label-break {
     margin-left: 3vw;
 }
 
 .desc-select {
     margin-left: 1vw;
+}
+
+/* Add code block button */
+.add_code_block-btn {
+    background-color: #FFD369;
+    margin-left: 1.5vw;
+    min-width: 4vw;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
+    border-radius: 1vh;
+    height: 4vh;
+    font-family: "Electrolize";
+    border: none;
+    cursor: pointer;
+}
+
+.add_code_block-btn:hover {
+    background-color: #e5b443;
+}
+
+.add_code_block-btn:active {
+    background-color: #8e6e26;
+}
+
+/* Description container */
+.exercise_editor_page-form-item-description {
+    margin-top: 1vh;
+    width: 50vw;
+    min-height: 20vh;
+    padding-left: 1vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    font-size: 2vh;
+    background-color: #d8d9db;
+    border-radius: 1vh;
+    overflow-y: auto;
+}
+
+.exercise_editor_page-form-item-description p {
+    margin: 0;
+    min-height: 2vh;
+    line-height: 1.5;
+}
+
+/* Code block wrapper */
+.code-block-wrapper {
+    display: flex;
+    background-color: #a9aaad;
+    border-radius: 1vh;
+    margin: 1vh 0;
+    overflow: hidden;
+    font-family: "Courier New", Courier, monospace;
+}
+
+/* Line numbers */
+.code-block-line-numbers {
+    background-color: #8d8e91;
+    color: #ffffff;
+    padding: 1vh 0.5vw;
+    text-align: right;
+    font-size: 1.5vh;
+    line-height: 2.5vh;
+    user-select: none;
+    min-width: 3vw;
+    overflow: hidden;
+    white-space: pre;
+}
+
+/* Code content */
+.code-block-content {
+    flex: 1;
+    background-color: #a9aaad;
+    color: #ffffff;
+    padding: 1vh 0.5vw;
+    border: none;
+    outline: none;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1.5vh;
+    line-height: 2.5vh;
+    resize: none;
+    overflow-y: auto;
+    overflow-x: auto;
+    white-space: pre;
+    min-height: 10vh;
+    max-height: 40vh;
+}
+
+.code-block-content::-webkit-scrollbar {
+    width: 0.5vw;
+    height: 0.5vh;
+}
+
+.code-block-content::-webkit-scrollbar-track {
+    background: #8d8e91;
+}
+
+.code-block-content::-webkit-scrollbar-thumb {
+    background: #6d6e71;
+    border-radius: 0.5vh;
+}
+
+.code-block-content::-webkit-scrollbar-thumb:hover {
+    background: #5d5e61;
+}
+
+/* Prevent image selection */
+img {
+    user-select: none;
 }
