--- a/client/src/pages/ExerciseEditor/exerciseEditor.css
+++ b/client/src/pages/ExerciseEditor/exerciseEditor.css
@@ -67,6 +67,7 @@
 
 .exercise_editor_page-form-item-checkbox {
     transform: scale(1.7);
+    z-index: 2 !important;
 }
 
 .small-textarea {
@@ -178,12 +179,8 @@
 }
 
 .exercise_editor-course_menu-wrap {
-    width: 40vw;
-    height: 100%;
-}
-
-.exercise_editor-course_menu-wrap {
     position: fixed;
+    z-index: 2;
     background-color: #a9aaad;
     height: 100%;
     min-height: 100vh;
@@ -249,12 +246,15 @@
 }
 
 .small_btn {
-    height: 3.2vh;
+    height: 3.5vh;
+    width: 7vw;
     background-color: rgb(70, 212, 70);
     border: 1px solid rgb(48, 177, 48);
+    margin-left: 1vw;
 }
 
 .course_menu-course-exercises {
+    min-height: 2vh;
     display: flex;
     flex-direction: column;
     margin-top: 0.5vh;
@@ -315,4 +315,10 @@
 
 .course_menu-course-del img:hover {
     transform: scale(1.1);
+}
+
+.no_course {
+    font-size: 2vh;
+    margin-top: 5vh;
+    margin-left: 2vw;
 }
