--- a/client/src/pages/ExerciseEditor/componenets/components.css
+++ b/client/src/pages/ExerciseEditor/componenets/components.css
@@ -262,10 +262,9 @@
     margin: 1vh 0;
     width: 90%;
     overflow: hidden;
-    font-family: "Electrolize", Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
 }
 
-/* Line numbers */
 .code-block-line-numbers {
     background-color: #8d8e91;
     color: #ffffff;
@@ -279,7 +278,6 @@
     white-space: pre;
 }
 
-/* Code content */
 .code-block-content {
     flex: 1;
     background-color: #a9aaad;
@@ -288,7 +286,6 @@
     padding: 0 0.5vw;
     border: none;
     outline: none;
-    font-family: "Electrolize";
     font-size: 1.5vh;
     line-height: 2.5vh;
     resize: none;
@@ -317,7 +314,241 @@
     background: #5d5e61;
 }
 
-/* Prevent image selection */
 img {
     user-select: none;
+}
+
+.testCase-wrap {
+    width: 50vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1vh;
+}
+
+.testCase {
+    width: 100%;
+    background-color: #bbbdc1;
+    border-radius: 1.4vh;
+    padding: 1vh;
+    border: 2px solid black
+}
+
+.testCase-line {
+    display: flex;
+    gap: 2vw;
+}
+
+.testCase-header {
+    min-width: 9vw;
+    color: #e5ff73;
+    font-size: 2.1vh;
+}
+
+.testCase-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.3vw;
+}
+
+.testCase-checkbox {
+    transform: scale(1.2);
+    z-index: 2 !important;
+}
+
+.testCase-delete-btn {
+    width: 1.5vw;
+    height: 3vh;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.testCase-infoLine {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.testCase-items {
+    display: flex;
+    gap: 1vw;
+}
+
+.testCase-inputs-wrap {
+    margin-top: 1vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.testCase-inputs {
+    width: 47.5vw;
+    background-color: #8d8e91;
+    border-radius: 1.5vh;
+    padding: 1vh;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5vh;
+}
+
+.testCase-input-wrap {
+    padding: 0.5vh;
+    background-color: #bbbdc1;
+    border-radius: 0.6vh;
+    flex: 0 0 auto;
+    min-width: 10vw;
+}
+
+.testCase-inputs-row {
+    display: flex;
+    gap: 1vw;
+    margin-bottom: 1vh;
+    flex-wrap: wrap;
+}
+
+.testCase-input-edit {
+    margin-top: 0.3vh;
+    min-width: 8vw;
+    max-width: 50vw;
+    background-color: #ffffff;
+    border: 2px solid #4a90e2;
+    border-radius: 0.5vh;
+    padding: 0.5vh;
+    min-height: 2vh;
+    line-height: 1.4;
+    outline: none;
+    font-family: inherit;
+    font-size: inherit;
+    resize: none;
+    overflow: auto;
+    box-sizing: border-box;
+    white-space: nowrap;
+    word-break: normal;
+}
+
+.testCase-input-edit:focus {
+    border-color: #357abd;
+    box-shadow: 0 0 0 3px rgba(74, 144, 226, 0.1);
+}
+
+.testCase-input {
+    margin-top: 0.3vh;
+    min-width: 3vw;
+    max-width: 46.5vw;
+    background-color: #d8d9db;
+    border-radius: 0.5vh;
+    padding: 0.5vh;
+    min-height: 2vh;
+    line-height: 2vh;
+    cursor: pointer;
+    white-space: pre-wrap;
+    word-break: break-word;
+}
+
+.testCase-input-del {
+    cursor: pointer;
+    width: 2vh;
+    height: 2vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.testCase-input-del img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.textCase-inputs-btn {
+    height: 3vh;
+    width: 5vw;
+    background-color: #FFD369;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
+    margin-bottom: 0.5vh;
+    border-radius: 1vh;
+    font-family: "Electrolize";
+    border: none;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+.textCase-inputs-btn:hover {
+    background-color: #e5b443;
+    transform: scale(1.1);
+}
+
+.textCase-inputs-btn:active {
+    background-color: #8e6e26;
+}
+
+.testCase-input-line {
+    display: flex;
+    justify-content: space-between;
+}
+
+.testCase-input-del img:hover {
+    transform: scale(1.1);
+}
+
+.testCase-file {
+    margin-top: 2vh;
+    width: 100%;
+    min-height: 5vh;
+}
+
+.testCase-file {
+    width: 47.5vw;
+    display: flex;
+    flex-direction: column;
+    background-color: #999;
+    padding: 1vh;
+    border-radius: 1.5vh;
+}
+
+.testCase-file-name {
+    margin-bottom: 1vh;
+    padding: 0.5vh;
+    border-radius: 0.8vh;
+    font-size: 1.5vh;
+    border: 0;
+}
+
+.testCase-file-value {
+    resize: none;
+    border-radius: 0.8vh;
+    padding: 0.5vh;
+    font-family: "Electrolize";
+}
+
+.testCase-file label {
+    font-size: 2vh;
+}
+
+.testCase-params {
+    width: 47.5vw;
+    margin-top: 2vh;
+    min-height: 5vh;
+    background-color: #999;
+    border-radius: 1.5vh;
+    padding: 1vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.testCase-params-header {
+    font-size: 2vh;
+}
+
+.testCase-params-input {
+    width: 98.5%;
+    padding: 0.5vh;
+    margin-top: 0.5vh;
+    border-radius: 0.5vh;
+    border: 0;
+    font-family: "Electrolize";
+    font-size: 1.5vh;
 }
