--- a/client/src/pages/ExerciseEditor/exerciseEditor.css
+++ b/client/src/pages/ExerciseEditor/exerciseEditor.css
@@ -345,3 +345,176 @@
     color: #999;
     font-weight: 400;
 }
+
+.exercise_editor_page-execise_type-wrap {
+    min-height: 10vh;
+    width: 98%;
+    display: flex;
+    align-items: center;
+}
+
+.exercise_editor_page-execise_type {
+    margin-top: 5vh;
+    width: 45%;
+    min-height: 10vh;
+    background-color: #999;
+    border-radius: 3vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.exercise_editor_page-execise_type-header {
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    font-family: "Electrolize";
+    color: #FFD369;
+    font-size: 2.3vh;
+    text-align: center;
+}
+
+.exercise_editor_page-execise_type-choises {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+    margin-bottom: 3vh;
+}
+
+.exercise_editor_page-execise_type-choise {
+    width: 10vw;
+    height: 6vh;
+    background-color: #d8d9db;
+    border-radius: 1vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: 0.1s ease-in-out;
+    cursor: pointer;
+}
+
+.exercise_editor_page-execise_type-choise.active {
+    background-color: #565c64;
+}
+
+.exercise_editor_page-execise_type-choise:hover {
+    transform: scale(1.1);
+}
+
+.exercise_editor_page-execise_type-choise:active {
+    transform: scale(1.1);
+}
+
+.exercise_editor_page-exercise_cases-wrap {
+    width: 100%;
+    min-height: 10vh;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2vh;
+}
+
+.exercise_editor_page-add_case_btn {
+    height: 4vh;
+    width: 6vw;
+    background-color: #FFD369;
+    margin-left: 1.5vw;
+    margin-top: 3vh;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
+    border-radius: 1vh;
+    font-family: "Electrolize";
+    border: none;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+.exercise_editor_page-add_case_btn:hover {
+    background-color: #e5b443;
+    transform: scale(1.1);
+}
+
+.exercise_editor_page-add_case_btn:active {
+    background-color: #8e6e26;
+}
+
+
+.exercise_editor_page-exercise_cases {
+    margin-top: 1vh;
+    min-height: 5vh;
+    width: 90%;
+    background-color: #999;
+    border-radius: 2vh;
+    gap: 1vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.exercise_editor_page-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.exercise_editor_page-completeSol-wrap {
+    min-height: 5vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.exercise_editor_page-completeSol {
+    background-color: #999;
+    width: 90%;
+    min-height: 10vh;
+    border-radius: 2vh;
+    padding: 1vh;
+}
+
+.exercise_editor_page-completeSol-header {
+    margin-top: 1vh;
+    margin-left: 1vw;
+    font-family: "Electrolize";
+    color: #FFD369;
+    font-size: 2.3vh;
+}
+
+.exercise_editor_page-completeSol-textarea {
+    resize: none;
+    padding: 1vh;
+    width: 98%;
+    border: 0;
+    border-radius: 1vh;
+    margin-top: 1vh;
+}
+
+.exercise_editor_page-funcName-wrap {
+    width: 25vw;
+    display: flex;
+}
+
+.exercise_editor_page-funcName {
+    margin-top: 1vh;
+    width: 90%;
+    background-color: #999;
+    height: 9vh;
+    border-radius: 2vh;
+    padding: 1vh;
+}
+
+.exercise_editor_page-funcName-header {
+    margin-top: 1vh;
+    margin-left: 1vw;
+    font-family: "Electrolize";
+    color: #FFD369;
+    font-size: 2.3vh;
+}
+
+.exercise_editor_page-funcName-input {
+    border-radius: 1vh;
+    border: 0;
+    width: 95%;
+    padding: 1vh;
+    margin-top: 1.5vh;
+    font-family: "Electrolize";
+}
